--- a/templates/menup.html
+++ b/templates/menup.html
@@ -8,8 +8,6 @@
 
         <link rel="shortcut icon" href="/static/images/img.png" type="image/x-icon">
 
-
-
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
                 integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
@@ -21,6 +19,24 @@
 <body class="bg-navi">
         <nav class="navbar bg-nav">
                 <a href="./" class="navbar-brand bg-nav text-light">OnlyGames</a>
+                <FORM method=GET action="https://store.steampowered.com/search/?term=">
+                        <fieldset>
+
+                                <INPUT TYPE=text id="s" placeholder="Busca Juegos {{nombre}}" name="term" size="50" />
+                                <font size=-1>
+
+
+                                        <input type=radio name=sitesearch value="En Steam" class="text-light"
+                                                style="text-decoration-color: aliceblue;"><a
+                                                class="text-light">Steam</a></input>
+                                        <input type=radio name=sitesearch value="ec2-3-80-52-23.compute-1.amazonaws.com"
+                                                checked> <a class="text-light">OnlyGames</a> </input>
+
+                                        <INPUT type=submit id="x" class="btn btn-primary btn-log" name=btnG
+                                                VALUE="Buscar" />
+                                </font>
+                        </fieldset>
+                </FORM>
         </nav>
 
         <div class="container">
