--- a/templates/menup.html
+++ b/templates/menup.html
@@ -32,8 +32,8 @@
                                         <input type=radio name=sitesearch value="ec2-3-80-52-23.compute-1.amazonaws.com"
                                                 checked> <a class="text-light">OnlyGames</a> </input>
 
-                                        <INPUT type=submit id="x" class="btn btn-primary btn-log" name=btnG
-                                                VALUE="Buscar" />
+                                        <INPUT type=submit id="x" class="btn btn-primary btn-log" name=btnG VALUE="Buscar" />
+                                        <INPUT type=submit id="x" class="btn btn-outline-primary" name=btnG VALUE="Logout" />
                                 </font>
                         </fieldset>
                 </FORM>
