--- a/templates/indexinicial.html
+++ b/templates/indexinicial.html
@@ -33,11 +33,11 @@
                         <div class="col-md-4 al " style="padding-top: 100px;">
                                 <div class="card">
                                         <div class="card-body">
-                                                <form action="" class="form">
+                                                <form action="/login_validation" method="POST" class="form">
                                                         <label for="">Nombre De Usuario</label><br>
-                                                        <input type="text" class="form-control"><br>
+                                                        <input type="text" class="form-control" name="usuario"><br>
                                                         <label for="">Contraseña</label><br>
-                                                        <input type="password" class="form-control"><br><br>
+                                                        <input type="password" class="form-control" name="contraseña"><br><br>
                                                         <input type="submit" class="btn btn-primary btn-block btn-log"
                                                                 value="Login">
                                                 </form>
