registro, sesiones y log out funcionando

--- a/templates/indexreg.html
+++ b/templates/indexreg.html
@@ -30,13 +30,13 @@
 			<div class="col-md-4 al " style="padding-top: 100px;">
 				<div class="card">
 					<div class="card-body">
-						<form action="" class="form">
+						<form action="/crear_usuario" class="form" method="POST">
 							<label for="">Nombre De Usuario</label><br>
-							<input type="text" class="form-control"><br>
+							<input type="text" class="form-control" name="usuario"><br>
 							<label for="">Correo</label><br>
-							<input type="email" class="form-control"><br>
+							<input type="email" class="form-control" name="correo"><br>
 							<label for="">Contraseña</label><br>
-							<input type="password" class="form-control"><br><br>
+							<input type="password" class="form-control" name="contraseña"><br><br>
 							<input type="submit" class="btn btn-primary btn-block btn-log" value="Registrarse">
 						</form>
 						<p class="mt-2">¿eres miembro? <a href="/">Inicia Sesion</a></p>
