--- a/templates/menup.html
+++ b/templates/menup.html
@@ -22,7 +22,7 @@
                 <FORM method=GET action="https://store.steampowered.com/search/?term=">
                         <fieldset>
 
-                                <INPUT TYPE=text id="s" placeholder="Busca Juegos {{nombre}}" name="term" size="50" />
+                                <INPUT TYPE=text id="s" placeholder="Busca Juegos {{usuario}}" name="term" size="50" />
                                 <font size=-1>
 
 
@@ -33,7 +33,8 @@
                                                 checked> <a class="text-light">OnlyGames</a> </input>
 
                                         <INPUT type=submit id="x" class="btn btn-primary btn-log" name=btnG VALUE="Buscar" />
-                                        <INPUT type=submit id="x" class="btn btn-outline-primary" name=btnG VALUE="Logout" />
+                                        <a href="/logout" class="btn btn-outline-primary">Logout</a>
+                                        
                                 </font>
                         </fieldset>
                 </FORM>
