--- a/templates/index.html
+++ b/templates/index.html
@@ -7,14 +7,29 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <link rel="shortcut icon" href="/static/images/img.png" type="image/x-icon">
-
+        <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
                 integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
                 crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+                crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+                crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+                crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+                crossorigin="anonymous"></script>
 
         <title>OnlyGames</title>
 </head>
+
+
 
 <body class="bg-navi">
         <nav class="navbar bg-nav">
@@ -32,53 +47,37 @@
                                         <input type=radio name=sitesearch value="ec2-3-80-52-23.compute-1.amazonaws.com"
                                                 checked> <a class="text-light">OnlyGames</a> </input>
 
-                                        <INPUT type=submit id="x" class="btn btn-primary btn-log" name=btnG VALUE="Buscar" />
+                                        <INPUT type=submit id="x" class="btn btn-primary btn-log" name=btnG
+                                                VALUE="Buscar" />
                                         <a href="/logout" class="btn btn-outline-primary">Logout</a>
-                                        
+
                                 </font>
                         </fieldset>
                 </FORM>
         </nav>
-
-        <div class="container">
-                <div class="row">
-                        <div class="col-md-8">
-                                <h1 class="text-light display-4 mt-50" style="font-size: 80px; font-family: cursive;">
-                                        Ayudandote A Elegir La Mejor Opcion En Tus Videojuegos!</h1>
-                        </div>
-
-                        <div class="col-md-4 al " style="padding-top: 100px;">
-                                <div class="card">
-                                        <div class="card-body">
-                                                <form action="" class="form">
-                                                        <label for="">Nombre De Usuario</label><br>
-                                                        <input type="text" class="form-control"><br>
-                                                        <label for="">Contraseña</label><br>
-                                                        <input type="password" class="form-control"><br><br>
-                                                        <input type="submit" class="btn btn-primary btn-block btn-log"
-                                                                value="Login">
-                                                </form>
-                                                <p class="mt-2">¿No eres miembro? <a href="/registro">Crear Cuenta</a>
-                                                </p>
-                                        </div>
-                                </div>
-                        </div>
-                        <div>
-                                <img src="https://blogs.unsw.edu.au/nowideas/files/2020/04/videojuegos.jpg"
-                                        alt="videogames" width="500" height="300" style="border: 1;">
-                        </div>
-                </div>
-        </div>
-
         <!-- Optional JavaScript; choose one of the two! -->
 
         <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-                crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-                crossorigin="anonymous"></script>
+        <div id="app">
+                
+                <h1>{{info}}</h1>
+        </div>
+
+        <script>
+                new Vue({
+                        el: '#app',
+                        data() {
+                                return {
+                                        info: null
+                                }
+                        },
+                        mounted() {
+                                axios
+                                        .get('https://api.coindesk.com/v1/bpi/currentprice.json')
+                                        .then(response => (this.info = response))
+                        }
+                })
+        </script>
 </body>
 
 <style>
@@ -110,5 +109,6 @@
                 align-content: space-around;
         }
 </style>
+
 
 </html>
