--- a/templates/index.html
+++ b/templates/index.html
@@ -1,48 +1,114 @@
-<template>
-        <ul v-if="posts && posts.length">
-                <li v-for="post of posts">
-                        <p><strong>{{post.title}}</strong></p>
-                        <p>{{post.body}}</p>
-                </li>
-        </ul>
+<!doctype html>
+<html lang="en">
 
-        <ul v-if="errors && errors.length">
-                <li v-for="error of errors">
-                        {{error.message}}
-                </li>
-        </ul>
-</template>
+<head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<script>
-        import axios from 'axios';
+        <link rel="shortcut icon" href="/static/images/img.png" type="image/x-icon">
+        <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+                integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+                crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+                crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+                crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+                crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+                crossorigin="anonymous"></script>
 
-        export default {
-                data() {
-                        return {
-                                posts: [],
-                                errors: []
+        <title>OnlyGames</title>
+</head>
+
+
+
+<body class="bg-navi">
+        <nav class="navbar bg-nav">
+                <a href="./" class="navbar-brand bg-nav text-light">OnlyGames</a>
+                <FORM method=GET action="https://store.steampowered.com/search/?term=">
+                        <fieldset>
+
+                                <INPUT TYPE=text id="s" placeholder="Busca Juegos {{usuario}}" name="term" size="50" />
+                                <font size=-1>
+
+
+                                        <input type=radio name=sitesearch value="En Steam" class="text-light"
+                                                style="text-decoration-color: aliceblue;"><a
+                                                class="text-light">Steam</a></input>
+                                        <input type=radio name=sitesearch value="ec2-3-80-52-23.compute-1.amazonaws.com"
+                                                checked> <a class="text-light">OnlyGames</a> </input>
+
+                                        <INPUT type=submit id="x" class="btn btn-primary btn-log" name=btnG
+                                                VALUE="Buscar" />
+                                        <a href="/logout" class="btn btn-outline-primary">Logout</a>
+
+                                </font>
+                        </fieldset>
+                </FORM>
+        </nav>
+        <!-- Optional JavaScript; choose one of the two! -->
+
+        <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+        <div id="app">
+                
+                <h1>{{info}}</h1>
+        </div>
+
+        <script>
+                new Vue({
+                        el: '#app',
+                        data() {
+                                return {
+                                        info: null
+                                }
+                        },
+                        mounted() {
+                                axios
+                                        .get('https://api.coindesk.com/v1/bpi/currentprice.json')
+                                        .then(response => (this.info = response))
                         }
-                },
+                })
+        </script>
+</body>
 
-                // Fetches posts when the component is created.
-                created() {
-                        axios.get(`http://jsonplaceholder.typicode.com/posts`)
-                                .then(response => {
-                                        // JSON responses are automatically parsed.
-                                        this.posts = response.data
-                                })
-                                .catch(e => {
-                                        this.errors.push(e)
-                                })
+<style>
+        .bg-nav {
+                background: #0f0c29;
+                /* fallback for old browsers */
+                background: -webkit-linear-gradient(to bottom, #24243e, #302b63, #0f0c29);
+                /* Chrome 10-25, Safari 5.1-6 */
+                background: linear-gradient(to bottom, #24243e, #302b63, #0f0c29);
+                /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-                        // async / await version (created() becomes async created())
-                        //
-                        // try {
-                        //   const response = await axios.get(`http://jsonplaceholder.typicode.com/posts`)
-                        //   this.posts = response.data
-                        // } catch (e) {
-                        //   this.errors.push(e)
-                        // }
-                }
+
         }
-</script>
+
+        .bg-navi {
+                background: #0f0c29;
+                background: -webkit-linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
+                /* Chrome 10-25, Safari 5.1-6 */
+
+
+        }
+
+        .mt-50 {
+                margin-right: 200px;
+                margin-top: 5px;
+        }
+
+        .al {
+                align-content: space-around;
+        }
+</style>
+
+
+</html>
