--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
         <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
         <div id="app">
                 
-                <h1>{{info}}</h1>
+                <h1>{{data}}</h1>
         </div>
 
         <script>
