--- a/templates/index.html
+++ b/templates/index.html
@@ -56,27 +56,36 @@
                 </FORM>
         </nav>
 
-        <div id="app" class="text-light">
+        <div id="app">
                 <div class="text-center">
-                        <button v-on:click="data" type="button" class="btn btn-outline-primary">MOSTRAR</button>
+                        <button v-on:click="data" type="button" class="btn btn-outline-primary">Mostrar Juegos Del Momento</button>
                 </div>
                 <br>
-                <div>
-                        <div>
+                <div class="container">
+                        <div class="row">
                                 <div v-for="u in posts" class="col-6 col-sm-4">
                                         <br>
-                                        <div>
-                                                <img v-bind:src="u.avatar">
+                                        <div v-on:click="p(u.id)" style="cursor: pointer;" class="card" style="width: 20rem;">
+
+                                                <br>
                                                 <div>
-                                                        <h5>{{u.id}} </h5>
-                                                
+                                                        <img v-bind:src="u.background_image" height="300px"
+                                                        width="350px">
+                                                        <div>
+                                                                <h5>{{u.name}} </h5>
+                                                                <p>Rating: {{u.rating}}</p>
+
+                                                        </div>
                                                 </div>
+
+
                                         </div>
 
                                 </div>
                                 <br>
                         </div>
                 </div>
+
 
         </div>
 
@@ -158,3 +167,5 @@
 
 
 </html>
+
+
